--- a/framework/styles/scss/app.scss
+++ b/framework/styles/scss/app.scss
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 // Mixins
 @import "scss/mixins";
@@ -10,7 +10,6 @@
 // Components
 @import "scss/buttons";
 @import "scss/forms";
-@import "scss/notifications";
 
 // Animations
 @import "scss/animations";
