--- a/framework/styles/scss/_reset.scss
+++ b/framework/styles/scss/_reset.scss
@@ -5,9 +5,8 @@ body {
 }
 
 body {
-  color: $b-80;
-  font-family: "Open Sans", sans-serif;
-  line-height: 1.3;
+  font-family: "ProximaNova", "Open Sans", sans-serif;
+  line-height: 1.35;
   @include font-smooth;
 }
 
@@ -42,6 +41,7 @@ a {
   background-color: transparent;
   text-decoration: none;
   color: $b-70;
+
   &:hover {
     color: $dark-green;
   }
