building EZ as per psd

--- a/framework/styles/scss/_colors.scss
+++ b/framework/styles/scss/_colors.scss
@@ -10,18 +10,16 @@ $b-80: rgba(0, 0, 0, 0.8);
 $b-90: rgba(0, 0, 0, 0.9);
 $b: rgba(0, 0, 0, 1);
 
+$w-50: rgba(white, 0.5);
+$w-60: rgba(white, 0.6);
+$w-70: rgba(white, 0.7);
+$w-80: rgba(white, 0.8);
 $w-90: rgba(white, 0.9);
 $w-98: rgba(white, 0.98);
 $w: rgb(255, 255, 255);
 
 // UI
-$light-blue: rgb(82, 165, 194);
-$blue: rgb(0, 132, 199);
-$green: rgb(115, 203, 1);
-$dark-green: rgb(71, 139, 84);
-$orange: rgb(220, 94, 46);
-$tomato: rgb(255, 99, 71);
-$red: rgb(246, 90, 91);
+$blue: rgb(67, 131, 187);
 
 // SOCIAL COLORS
 $facebook: rgb(57, 87, 157);
