--- a/framework/styles/scss/_buttons.scss
+++ b/framework/styles/scss/_buttons.scss
@@ -1,114 +1,60 @@
-/*-------------------------*\
- * BUTTONS */
+/*------------------------- *\
+ * BUTTONS
 /*------------------------- */
-.button {
-  padding: 10px 20px;
-  border: 1px solid;
-  @include border-radius;
+button,
+.btn {
+  display: inline-block;
+  padding: 7px 20px;
+  border: 2px solid;
+  @include border-radius(35px);
   background: none;
-  font-size: 13px;
-  color: $b-60;
+  color: $b-80;
   line-height: 1.5;
   letter-spacing: 0.25px;
   font-weight: 600;
-  @include transition(box-shadow 233ms);
-  &:hover {
-    box-shadow: 0 1px 2px 0 $b-10, 0 4px 8px 0 $b-20;
-  }
-}
+  @include transition(color 177ms, border 177ms);
+  cursor: pointer;
 
-button,
-button:focus,
-button:active {
-  outline: none;
-}
-
-button {
-  @extend .button;
   @include retina {
     font-weight: 400;
+    border-width: 1px;
   }
 
-  i {
-    float: left;
-    margin-right: 10px;
-    font-size: 19px;
-  }
   &.fill {
     border: none;
     background-color: $b-05;
     color: $b-60;
   }
-  &.green {
-    color: $green;
-  }
-  &.green-fill {
-    border: none;
-    background-color: $green;
-    color: $w;
-  }
-  &.dark-green {
-    color: $dark-green;
-  }
-  &.dark-green-fill {
-    border: none;
-    background-color: $dark-green;
-    color: $w;
-  }
-  &.tomato {
-    color: $tomato;
-  }
-  &.tomato-fill {
-    border: none;
-    background-color: $tomato;
-    color: $w;
-  }
-  &.red {
-    color: $red;
-  }
-  &.red-fill {
-    border: none;
-    background-color: $red;
-    color: $w;
-  }
-  &.follow,
-  &.join {
-    margin: 30px;
-    border: none;
-    background-color: $dark-green;
-    color: $w;
-  }
-  &.explore {
-    display: block;
-    margin: 20px auto;
-    border: none;
-    font-size: 22px;
-  }
-  &.added {
-    background-color: $b-05 !important;
-    color: $b-60 !important;
-  }
-  &.edit {
-    float: right;
-    height: 28px;
-    padding: 0 20px;
-    margin-top: 4px;
-    margin-right: 30px;
-    background-color: $w;
-    color: $tomato;
-    line-height: 1;
-  }
-  &.save-button {
-    float: right;
-    border: none;
-    background-color: $dark-green;
-    color: $w;
-  }
-}
 
-.top-bar-container {
-  button {
-    margin: 14px 7px;
+  &.white {
+    border-color: $w-60;
+    color: $w-90;
+
+    &:hover {
+      border-color: $w-80;
+      color: $w;
+    }
+  }
+
+  &.white-fill {
     border: none;
+    background-color: $w;
+    color: $b-80;
+  }
+
+  i {
+    font-size: 17px;
+
+    &.left {
+      float: left;
+      margin-left: -5px;
+      margin-right: 5px;
+    }
+
+    &.right {
+      float: right;
+      margin-left: 5px;
+      margin-right: -5px;
+    }
   }
 }
