--- a/framework/styles/scss/_reset.scss
+++ b/framework/styles/scss/_reset.scss
@@ -43,7 +43,7 @@ a {
   color: $b-70;
 
   &:hover {
-    color: $dark-green;
+    color: $b-80;
   }
 }
 
@@ -72,13 +72,16 @@ strong {
   font-weight: bold;
 }
 
-i,
 em {
   font-style: italic;
 }
 
 img {
   border: 0;
+}
+
+i {
+  line-height: 1.35
 }
 
 svg:not(:root) {
@@ -102,7 +105,10 @@ textarea {
   outline: none;
 }
 
-button {
+button,
+button:focus,
+button:active {
+  outline: none;
   overflow: visible;
 }
 
